# plot

./: .gitignore  .gitlab-ci.yml  LICENSE  Makefile  README.md  meson.build  meson_options.txt
.builds/: alpine.yml
.github/workflows/: ci.yml
cli/: animate.c  main.c  meson.build  opts.c
docs/: inserter.py  meson.build  plot.1.scd  plot.1.scd.in
examples/: meson.build  monitor  simple.c  simple_curses.c
ext/: asciiplot.c  extconf.rb
include/: data_pipe.h  data_proc.h  input.h  log.h  meson.build  opts.h  plot.h  util.h
include/cli/: animate.h  main.h  opts.h
include/internal/: data_proc.h  display.h  log.h  util.h
include/plot/: file_input.h  meson.build  plot.h
lib/: data_pipe.c  data_proc.c  display.c  file_input.c  input.c  log.c  meson.build  plot.c  util.c  version.c.in
packaging/: plot.spec
src/: alloc.c  alloc.h  animate.c  animate.h  cli.c  data_pipe.c  data_pipe.h  data_proc.c  data_proc.h  debug.h  display.c  display.h  follow.c  follow.h  input.c  input.h  log.c  log.h  main.c  meson.build  opts.c  opts.h  plot.c  plot.h  read_arr.c  read_arr.h  util.c  util.h  version.c.in  version.h
src/plot/: display.c  plot.c  plot.h
tests/: .gitignore  basic.sh  follow.sh  meson.build  test.sh  valgrind.sh
